--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/posters/
     - assets/logo/
     - assets/bgImage/
+    - assets/details/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
