--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.1.1
   font_awesome_flutter: ^10.6.0
   flutter_bloc: ^8.1.3
+  http: ^1.2.0
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
